# libinterceptor

./: .gitignore  CMakeLists.txt  README.md
include/: libintercept.h  libinterceptor.h
src/: CMakeLists.txt  libintercept.c  libinterceptor.c
